@@ -5,6 +5,7 @@
   contributing.
 - Add code coverage reporting with gcov and lcov, using the gnome-common
   macros. autogen.sh will enable this automatically if lcov is installed.
+- Support comments in scripts, lines starting with '#' get ignored.
 
 0.4.3 (2013-08-23)
 ------------------
